src/css/drive.css
body {
  margin: 0;
  padding: 0;
}

.MuiBreadcrumbs-li a {
  color: #0d6efd !important;
}

.dynamic-icon {
  color: #737373;
}

.main {
  padding: 0 20px;
  width: 100%;
  user-select: none;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.file-dragging * {
  filter: blur(3px);
}

.file-dragging::before {
  content: "Drop files to upload";
  font-size: 20px;
  padding: 10px 20px;
  border-radius: 20px;
  background-color: #0966d5;
  position: fixed;
  top: 80px;
  left: 50%;
  transform: translateX(-50%);
  filter: blur(0) !important;
}

.main-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 10px;
}

.file-box {
  width: 100%;
  display: flex;
  flex-direction: column;
  border: thin solid lightgray;
  border-radius: 10px;
}

.folder-box {
  display: flex;
  border: thin solid lightgray;
  border-radius: 5px;
  padding: 10px 20px;
  gap: 10px;
}

.file-box-label {
  flex-basis: 20%;
  display: flex;
  align-items: center;
  padding: 0 20px;
  border-top: thin solid lightgray;
}

.actions-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 48px;
}

.selected {
  border: thin solid #1f6efd;
  color: #1f6efd;
}

.selected .dynamic-icon {
  color: #1f6efd !important;
}

.selected .file-box-label {
  border-top: thin solid #1f6efd;
}

.upload-progress-box {
  position: fixed;
  right: clamp(5px, 5%, 30px);
  bottom: 30px;
  width: 100%;
  max-width: 300px;
  z-index: 100;
}

.upload-progress-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  background: #353535;
  color: white;
  padding: 0 15px;
}

.upload-progress-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 15px;
  background: #fff;
  border: thin solid lightgray;
}

.highlight-js-container *::selection {
  background-color: #0966d5 !important;
}

.highlight-js-container {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.highlight-js-container code {
  width: 100%;
  height: 100%;
}

.highlight-js-container pre {
  width: 100%;
  height: 100%;
  margin: 0;
}

